# adaptiv-x

./: .gitignore  CHANGELOG.md  CITATION.cff  CODEBASE_AUDIT_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
aas/concept-descriptions/custom/: adaptivx-concepts.json
aas/concept-descriptions/eclass/: eclass-concepts.json
aas/submodels/capability/: capability-submodel.json
aas/submodels/health/: health-submodel.json
aas/submodels/simulation-models/: simulation-models-submodel.json
dashboard/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/api/: aas.ts
dashboard/src/components/: DispatcherView.tsx  FaultInjector.tsx  HealthPanel.tsx  SkillCard.tsx
dashboard/src/hooks/: useMqtt.ts
dashboard/src/store/: assetsSlice.ts  index.ts  jobsSlice.ts
deploy/compose/: .env.example  docker-compose.secure.yml  docker-compose.yml
deploy/compose/mosquitto/: mosquitto.conf
deploy/helm/adaptivx/: Chart.yaml  README.md  values.yaml
deploy/helm/adaptivx/templates/: _helpers.tpl  aas-environment.yaml  dashboard.yaml  infrastructure.yaml  ingress.yaml  registries.yaml  services.yaml
deploy/keycloak/: README.md  realm-adaptivx.json  realm-export.json
docs/: aas-modeling.md  architecture.md  demo-walkthrough.md
docs/semantics/: capability-schema.md
docs/trust/: decision-rationale.md
fmu/export/: README.md
fmu/modelica/: BearingWear.mo
fmu/scripts/: export_fmu.mos
libs/aas_contract/: pyproject.toml
libs/aas_contract/src/aas_contract/: __init__.py  models.py  paths.py
libs/auth/: pyproject.toml
libs/auth/src/adaptiv_auth/: __init__.py
scripts/: bootstrap_local.sh  run_demo.sh  seed_aas.sh
services/adaptiv-monitor/: Dockerfile  README.md  pyproject.toml
services/adaptiv-monitor/models/: anomaly_model.json.example
services/adaptiv-monitor/src/adaptiv_monitor/: __init__.py  basyx_client.py  config.py  fmu_runner.py  health_fusion.py  main.py  ml_model.py  mqtt_client.py
services/adaptiv-monitor/tests/: conftest.py  test_health_fusion.py
services/fault-injector/: Dockerfile  README.md  pyproject.toml
services/fault-injector/src/fault_injector/: __init__.py  clients.py  config.py  main.py
services/fault-injector/tests/: conftest.py  test_placeholder.py
services/job-dispatcher/: Dockerfile  README.md  pyproject.toml
services/job-dispatcher/src/job_dispatcher/: __init__.py  bidding.py  capability_cache.py  capability_query.py  config.py  main.py  mqtt_subscriber.py
services/job-dispatcher/tests/: conftest.py  test_placeholder.py
services/skill-broker/: Dockerfile  README.md  pyproject.toml
services/skill-broker/policy/: thresholds.yaml
services/skill-broker/src/skill_broker/: __init__.py  aas_patcher.py  config.py  main.py  models.py  mqtt_subscriber.py  policy_engine.py
services/skill-broker/tests/: conftest.py  test_placeholder.py
tests/: conftest.py
tests/integration/: test_aas_contracts.py
