[tool.poetry]
name = "aas-contract"
version = "0.1.0"
description = "Shared AAS contract definitions for Adaptiv-X"
authors = ["Adaptiv-X Team"]
license = "Apache-2.0"
packages = [{include = "aas_contract", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
