[tool.poetry]
name = "fault-injector"
version = "0.1.0"
description = "Fault injection orchestrator for Adaptiv-X demo scenarios"
authors = ["Adaptiv-X Team"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "fault_injector", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
httpx = "^0.26.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
aas-contract = {path = "../../libs/aas_contract", develop = true}
adaptiv-auth = {path = "../../libs/auth", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
bandit = "^1.7.7"

[tool.poetry.scripts]
fault-injector = "fault_injector.main:run"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["../../libs/aas_contract/src", "../../libs/auth/src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
